# meNexus-platform

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compose.dev.yaml  compose.yaml  env.example  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  turbo.json
apps/client-web/: Cargo.toml  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js  vite.config.ts
apps/client-web/public/styles/: BlushCloud.css  Cappuccino.css  Dracula.css  Enki.css  GameBoy.css  GruvboxDark.css  HighVisOrange.css  HighVisYellow.css  Indigo.css  Limewire.css  Malifex.css  Monokai.css  MoreMonstersAndSprites.css  OneDarkPro.css  RosePine.css  SalmonBurnt.css  SalmonFresh.css  SalmonRoasted.css  Sanskrit.css  ScaryMonstersAndNiceSprites.css  Solarized.css  TurboUnicornConfetti.css  VerdantEmber.css
apps/client-web/src/: App.css  App.jsx  App.tsx  app.rs  index.css  lib.rs  main.jsx  main.tsx
apps/client-web/src/api/: config.js
apps/client-web/src/api/hooks/: useActivityWebSocket.js  useAxios.js  useChatWebSocket.js  useCreateChatMessage.js  useCreateComment.js  useCreateConversation.js  useCreateNotification.js  useCreatePost.js  useCreateReaction.js  useCreateRemotePost.js  useCreateRemoteReaction.js  useCreateUser.js  useDeleteComment.js  useDeleteReaction.js  useDeleteRemotePost.js  useDeleteRemotePostComment.js  useDeleteRemoteReaction.js  useEditComment.js  useEditPost.js  useEditRemoteComment.js  useEditRemotePost.js  useFetchRemoteBoardPosts.js  useFetchRemoteChannelChats.js  useFetchRemoteComments.js  useFetchRemotePosts.js  useFetchRemoteReactions.js  useFetchRemoteSynapseAllActivities.js  useFetchRemoteSynapseChatChannels.js  useFetchRemoteSynapseMembers.js  useFetchRemoteSynapseMetadata.js  useFetchRemoteSynapsePostBoards.js  useFetchRemoteSynapseUserActivities.js  useGenerateCryptoKeys.js  useGetAllActivities.js  useGetAllDiscoveredPeers.js  useGetAllPosts.js  useGetBoardPosts.js  useGetChannelChatMessages.js  useGetComments.js  useGetConversations.js  (+26 more)
apps/client-web/src/components/: mod.rs  module_container.rs  simple_counter.rs
apps/client-web/src/components/ControlPanel/: ControlPanel.jsx
apps/client-web/src/components/DiscoveredSynapsesPanel/: DiscoveredSynapsesPanel.jsx
apps/client-web/src/components/FollowedUsersPanel/: FollowedUsersPanel.jsx
apps/client-web/src/components/GIPHY/: GiphyImage.jsx  GiphyTray.jsx
apps/client-web/src/components/GlobalActivityPanel/: GlobalActivityPanel.jsx
apps/client-web/src/components/GlobalFeed/: FeedPanel.jsx  FilterTray.jsx  SortTray.jsx
apps/client-web/src/components/Header/: Header.jsx
apps/client-web/src/components/IdentityPanel/: IdentityPanel.jsx  IdentityQuickActionsPanel.jsx  StatusPanel.jsx
apps/client-web/src/config/: endpoints.js  nginx.conf
apps/client-web/src/layouts/: dashboard_layout.rs  login_layout.rs  main_layout.rs  messenger_layout.rs  mod.rs  notifications_layout.rs  profile_layout.rs  register_layout.rs  remote_synapse_layout.rs  search_layout.rs  settings_layout.rs  synapse_layout.rs  three_column_module_layout.rs  two_column_module_layout.rs
apps/client-web/src/pages/: dashboard_page.rs  login_page.rs  messenger_page.rs  mod.rs  notifications_page.rs  profile_page.rs  register_page.rs  remote_synapse_page.rs  search_page.rs  settings_page.rs  synapse_page.rs
apps/client-web/src/styles/: Cappuccino.css  GameBoy.css  HighVisYellow.css  MoreMonstersAndSprites.css  OneDarkPro.css  RosePine.css  SalmonBurnt.css  Sanskrit.css  VerdantEmber.css
apps/client-web/src/utils/: authUtils.js  dateUtils.js
apps/client-web/style/: GruvboxDark.css  SalmonRoasted.css  THEME_TEMPLATE.md  base.css  main.css
apps/client-web/style/synapse-themes/: default.css  malifex.css  meNexus_dark.css
apps/client-web/style/user-themes/: malifex.css  meNexus_dark.css
backend/: package.json  (+3 more)
services/synapse/: .env.sample  Cargo.toml  Dockerfile  Dockerfile.prod  package-lock.json  package.json  pnpm-lock.yaml
services/synapse-rs/synapse-core/: Cargo.toml
services/synapse-rs/synapse-core/src/: lib.rs
services/synapse-rs/synapse-server/: Cargo.toml
services/synapse-rs/synapse-server/src/: errors.rs  main.rs
services/synapse/db/init/: 01-menexus_schema.sql  02-menexus-users-init.sh
services/synapse/docker/: entrypoint.sh
services/synapse/src/api/: server.js
services/synapse/src/config/: libp2p.js  orbitdb-service.js
services/synapse/src/core/: messenger.js  peerState.js  peerStateManager.js  snpPubSub.js  synapse.js
services/synapse/src/handlers/: handleData.js  handlePeer.js  handlerDirectory.js
services/synapse/src/orbitdb/: globalUsers.js  userPublicKeys.js
services/synapse/src/utils/: apiUtils.js  configUtils.js  createGlobalUsersDB.js  initSynapseConfig.js  initSynapseConfig.local.js  jwtUtils.js  menexus_schema.sql
services/synapse/synapse-adapters/adapter-libp2p/: Cargo.toml
services/synapse/synapse-adapters/adapter-postgres/: Cargo.toml
services/synapse/synapse-application/: Cargo.toml
services/synapse/synapse-application/src/: lib.rs
services/synapse/synapse-config/: Cargo.toml
services/synapse/synapse-config/src/: error.rs  lib.rs  manifest.rs
services/synapse/synapse-core/: Cargo.toml
services/synapse/synapse-core/src/: errors.rs  lib.rs
services/synapse/synapse-modules/module-activity/: Cargo.toml
services/synapse/synapse-modules/module-auth/: Cargo.toml
services/synapse/synapse-modules/module-chat/: Cargo.toml
services/synapse/synapse-modules/module-core/: Cargo.toml
services/synapse/synapse-modules/module-creator/: Cargo.toml
services/synapse/synapse-modules/module-livestream/: Cargo.toml
services/synapse/synapse-modules/module-members/: Cargo.toml
services/synapse/synapse-modules/module-posts/: Cargo.toml
services/synapse/synapse-modules/module-profiles/: Cargo.toml
services/synapse/synapse-protocols/protocol-snp/: Cargo.toml
services/synapse/synapse-server/: .env.sample  Cargo.toml
services/synapse/synapse-server/src/: errors.rs  main.rs  state.rs
(+914 files in other folders)
