[workspace]
resolver = "3"
members = [
  "synapse-adapters/adapter-libp2p",
  "synapse-adapters/adapter-postgres",
  "synapse-application",
  "synapse-config",
  "synapse-core",
  "synapse-server",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
  "formatting",
  "serde",
  "serde-well-known",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
uuid = "1.18.1"
