[workspace]
resolver = "3"
members = [
  "synapse-adapters/adapter-libp2p",
  "synapse-adapters/adapter-postgres",
  "synapse-application",
  "synapse-config",
  "synapse-core",
  "synapse-modules/module-core",
  "synapse-modules/module-posts", "synapse-modules/module-profiles",
  "synapse-protocols/protocol-snp",
  "synapse-server",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
  "formatting",
  "serde",
  "serde-well-known",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
