[package]
name = "synapse-core"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
