[package]
name = "synapse-server"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = { workspace = true }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "macros",
  "mysql",
  "time",
  "uuid",
] }
serde = { workspace = true }
serde_json = { workspace = true }
synapse-core = { path = "../synapse-core/" }
thiserror = { workspace = true }
time = { version = "0.3.44", features = ["formatting", "serde"] }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
