[package]
name = "synapse-application"
version = "0.1.0"
edition.workspace = true

[dependencies]
adapter-libp2p = { path = "../synapse-adapters/adapter-libp2p/" }
base64 = "0.22.1"
futures = { workspace = true }
libp2p = { version = "0.56.0", features = [
  "noise",
  "ping",
  "tcp",
  "tokio",
  "yamux",
] }
libp2p-kad = "0.48.0"
libp2p-mdns = { version = "0.48.0", features = ["tokio"] }
libp2p-swarm-derive = "0.35.1"
synapse-core = { path = "../synapse-core" }
synapse-config = { path = "../synapse-config" }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
