[package]
name = "synapse-core"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Crypto dependencies for event signature verification
hex = { version = "0.4.3", optional = true }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"], optional = true }
sha2 = { version = "0.10.9", optional = true }

[features]
default = []
crypto = ["dep:hex", "dep:k256", "dep:sha2"]
