[package]
name = "adapter-libp2p"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
libp2p = { version = "0.56.0", features = [
  "noise",
  "ping",
  "tokio",
  "yamux",
  "mdns",
  "kad",
] }
serde = { workspace = true }
serde_json = { workspace = true }
synapse-core = { path = "../../synapse-core" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
