[package]
name = "adapter-postgres"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
synapse-core = { path = "../../synapse-core" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "time",
  "uuid",
] }
time = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
