[package]
name = "adapter-postgres"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
module-profiles = { path = "../../synapse-modules/module-profiles", features = [
  "ssr",
] }
synapse-core = { path = "../../synapse-core" }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "time",
  "uuid",
  "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = { workspace = true }
