[package]
name = "module-auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
time = { workspace = true }
synapse-application = { path = "../../synapse-application" }
synapse-core = { path = "../../synapse-core" }
synapse-config = { path = "../../synapse-config" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = "0.9.2"
rand_core = "0.9.3"
getrandom = "0.3.4"
