[package]
name = "module-chat"
version = "0.1.0"
edition.workspace = true

[dependencies]
leptos = { version = "0.8.14" }
leptos_router = { version = "0.8.10" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Server-only dependencies
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"], optional = true }
leptos_axum = { version = "0.8.7", optional = true }
time = { workspace = true, optional = true }
synapse-application = { path = "../../synapse-application", optional = true }
synapse-core = { path = "../../synapse-core", optional = true }
synapse-config = { path = "../../synapse-config", optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
reqwasm = { version = "0.5.0", optional = true }

[features]
default = []
# Server-side rendering features - includes all server dependencies
ssr = [
  "leptos/ssr",
  "dep:async-trait",
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:time",
  "dep:synapse-application",
  "dep:synapse-core",
  "dep:synapse-config",
  "dep:thiserror",
  "dep:tracing",
]
# Client-side hydration features - only UI components
hydrate = ["leptos/hydrate", "dep:reqwasm"]
