[package]
name = "module-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
synapse-config = { path = "../../synapse-config" }
uuid = { workspace = true }
time = { workspace = true }
synapse-core = { path = "../../synapse-core" }
tracing = { workspace = true }
