[package]
name = "module-creator"
version = "0.1.0"
edition.workspace = true

[dependencies]
leptos = { version = "0.8.14" }
leptos_router = { version = "0.8.10" }
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[features]
default = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
