[package]
name = "module-livestream"
version = "0.1.0"
edition.workspace = true

[dependencies]
leptos = { version = "0.8.14" }
leptos_router = { version = "0.8.10" }
serde = { workspace = true }
serde_json = { workspace = true }

# Server-only dependencies
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
leptos_axum = { version = "0.8.7", optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
ssr = [
  "leptos/ssr",
  "dep:async-trait",
  "dep:axum",
  "dep:leptos_axum",
  "dep:thiserror",
  "dep:tracing",
]
hydrate = ["leptos/hydrate"]
