[package]
name = "module-members"
version = "0.1.0"
edition.workspace = true

[dependencies]
leptos = { version = "0.8.14", optional = true }
leptos_router = { version = "0.8.10", optional = true }
serde = { workspace = true }

[features]
default = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate", "dep:leptos", "dep:leptos_router"]
