[package]
name = "module-posts"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
synapse-application = { path = "../../synapse-application" }
synapse-core = { path = "../../synapse-core" }
synapse-config = { path = "../../synapse-config" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
