[package]
name = "module-posts"
version = "0.1.0"
edition.workspace = true


[dependencies]
leptos = { version = "0.8.14", optional = true }
reqwasm = { version = "0.5.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Client dependencies for signing
module-auth = { path = "../module-auth", optional = true }

# Server-only dependencies
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"], optional = true }
leptos_axum = { version = "0.8.7", optional = true }
leptos_meta = { version = "0.8.5" }
time = { workspace = true }
synapse-application = { path = "../../synapse-application", optional = true }
synapse-core = { path = "../../synapse-core", features = ["crypto"] }
synapse-config = { path = "../../synapse-config", optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
default = []
# Server-side rendering features - includes all server dependencies
ssr = [
  "leptos/ssr",
  "dep:async-trait",
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:synapse-application",
  "dep:synapse-config",
  "dep:thiserror",
  "dep:tracing",
]
# Client-side hydration features - only UI components
hydrate = ["leptos/hydrate", "dep:reqwasm", "module-auth/hydrate"]
