[package]
name = "module-profiles"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
automerge = "0.7.1"
axum = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
synapse-application = { path = "../../synapse-application" }
synapse-config = { path = "../../synapse-config" }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
synapse-core = { path = "../../synapse-core" }
tracing = { workspace = true }
