[package]
name = "module-profiles"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true, optional = true }
automerge = "0.7.1"
axum = { workspace = true, optional = true }
base64 = { workspace = true }
leptos = { version = "0.8.14", optional = true }
leptos_axum = { version = "0.8.7", optional = true }
module-auth = { path = "../module-auth" }
serde = { workspace = true }
serde_json = { workspace = true }
synapse-application = { path = "../../synapse-application", optional = true }
synapse-config = { path = "../../synapse-config", optional = true }
synapse-core = { path = "../../synapse-core" }
thiserror = { workspace = true, optional = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[features]
default = []

ssr = [
  "leptos/ssr",
  "dep:async-trait",
  "dep:axum",
  "dep:leptos_axum",
  "dep:thiserror",
  "dep:synapse-application",
  "dep:synapse-config",
]

hydrate = ["leptos/hydrate"]
